# KiThePlot

./: Cargo.toml  LICENSE  README.md
examples/: host_app2.rs
src/: lib.rs  main.rs
src/controller/: action.rs  command.rs  mod.rs
src/model/: data.rs  mod.rs  plot.rs  types.rs
src/testing/: mock_data.rs  mod.rs
src/view/: app.rs  menu.rs  mod.rs  panels.rs
