[package]
description = "KiThePlot is a standalone/embeddable plot redactor (plotting library) written in Rust"

name = "KiThePlot"
version = "0.4.0"
edition = "2024"
author = "Gleb Zaslavsky"
license = "MIT"
keywords = [ "sciense", "plot", "graph"]
repository = "https://github.com/Gleb-Zaslavsky/KiThePlot"
[lib]
name = "kithe_plot"

[dependencies]
eframe = "0.32.3"
egui = "0.32.3"
egui-plotter = "0.6.0"
plotters = "0.3.7"
nalgebra = "0.34.1"
rfd = "0.17.2"
